K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-pod
  namespace: devops-expensy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 160180/devopsexpensy_backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8706
