K8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: devops-expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 160180/expensy_frontend:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
