K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-expensy
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8706
      targetPort: 8706
  type: ClusterIP
